--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
-
 <body>
     <header>
         <div class="container">
-            <h1><i class="bi bi-wallet-fill"></i>Dev<span> Finance </span></h1>
+            <h1><i class="bi bi-wallet-fill"></i> Dev<span>Finance</span></h1>
         </div>
     </header>
 
@@ -47,8 +45,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody>
-                        </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
         </section>
@@ -58,7 +55,7 @@
         <div class="modal">
             <div id="form">
                 <h2>Nova Transação</h2>
-                <form action="" onsubmit="Form.submit(event)">
+                <form onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
                         <input type="text" id="description" name="description" placeholder="Descrição">
@@ -73,7 +70,7 @@
                         <input type="date" id="date" name="date">
                     </div>
                     <div class="input-group actions">
-                        <a href="#" onclick="Modal.close()" class="button cancelar">Cancelar</a>
+                        <button type="button" onclick="Modal.close()" class="button cancelar">Cancelar</button>
                         <button type="submit">Salvar</button>
                     </div>
                 </form>
@@ -87,5 +84,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
